Hamburger menu gap fixed

--- a/styles/hamburger-menu.css
+++ b/styles/hamburger-menu.css
@@ -64,6 +64,12 @@ a {
 }
 
 /* menu */
+.menu {
+  position: fixed;
+  top: 49px;
+  width: 100%;
+}
+
 .header .menu {
   clear: both;
   max-height: 0;
@@ -158,7 +164,6 @@ a {
     display: none;
   }
 
-  .header li a:hover,
   .header .menu-btn:hover {
     background-color: RGB(248, 197, 4);
   }
@@ -184,7 +189,7 @@ a {
     align-items: center;
     width: 5%;
   }
-
+}
 
 /*Desktop Responsive design */
 @media screen and (min-width: 87rem) {
@@ -233,5 +238,4 @@ a {
   .logo {
     width: 4%;
   }
-
 }
